feat: Introduce a comprehensive media sorting and organization application with detailed file type handling and EXIF date fallback.